# Dijkstra_parallelization

./: .gitignore  CMakeLists.txt  README.md  plot_results.py  run.sh
src/: gpu_dijkstra.cu  main.cpp
